--- a/folders/gpt-cli/requirements.txt
+++ b/folders/gpt-cli/requirements.txt
@@ -39,3 +39,8 @@ typing_extensions==4.5.0
 urllib3==1.26.15
 wcwidth==0.2.6
 yarl==1.8.2
+google-generativeai
+openai>=0.0.0  # Ensures you get the latest version
+cohere
+colorama
+gpt-cli
