--- a/folders/gpt-cli/requirements.txt
+++ b/folders/gpt-cli/requirements.txt
@@ -1,14 +1,14 @@
-aiohttp==3.8.4
+aiohttp==3.9.3
 aiosignal==1.3.1
-anthropic==0.2.7
+anthropic==0.25.9
 anyio==3.6.2
 async-timeout==4.0.2
-attrs==22.2.0
-black==23.1.0
+attrs==23.2.0
+black==24.4.2
 blessings==1.7
 certifi==2022.12.7
 charset-normalizer==3.1.0
-click==8.1.3
+click==8.1.7
 colorama==0.4.6
 frozenlist==1.3.3
 h11==0.14.0
@@ -19,28 +19,28 @@ markdown-it-py==2.2.0
 mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
-openai==0.27.2
+openai==1.30.1
 packaging==23.0
 pathspec==0.11.0
 platformdirs==3.1.1
-prompt-toolkit==3.0.38
+prompt-toolkit==3.0.43
 Pygments==2.14.0
-PyYAML==6.0
+PyYAML==6.0.1
 regex==2023.3.23
-requests==2.28.2
-rich==13.3.2
+requests==2.32.3
+rich==13.7.1
 six==1.16.0
 sniffio==1.3.0
 tiktoken==0.3.3
-tokenizers==0.13.3
+tokenizers==0.14.0
 tomli==2.0.1
-tqdm==4.65.0
-typing_extensions==4.5.0
-urllib3==1.26.15
+tqdm==4.66.2
+typing_extensions==4.11.0
+urllib3==2.2.2
 wcwidth==0.2.6
 yarl==1.8.2
-google-generativeai
-openai>=0.0.0  # Ensures you get the latest version
-cohere
-colorama
-gpt-cli
+google-generativeai==0.5.4
+openai==1.30.1
+cohere==5.5.3
+colorama==0.4.6
+gpt-cli==0.0.15
