--- a/folders/gpt-cli/requirements.txt
+++ b/folders/gpt-cli/requirements.txt
@@ -1,6 +1,9 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
-anthropic==0.25.9
+
+# Keep anthropic but allow some flexibility for future versions to avoid conflicts
+anthropic>=0.25.9,<0.26.0
+
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==23.2.0
@@ -19,7 +22,10 @@ markdown-it-py==2.2.0
 mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
+
+# Keep openai at this version since it's explicitly required
 openai==1.30.1
+
 packaging==23.0
 pathspec==0.11.0
 platformdirs==3.1.1
@@ -32,15 +38,21 @@ rich==13.7.1
 six==1.16.0
 sniffio==1.3.0
 tiktoken==0.3.3
-tokenizers==0.14.0
+
+# Loosen tokenizers to resolve the conflict between anthropic and cohere
+tokenizers>=0.13.0,<0.20
+
 tomli==2.0.1
 tqdm==4.66.2
 typing_extensions==4.11.0
 urllib3==2.2.2
 wcwidth==0.2.6
 yarl==1.8.2
+
+# Keep Google Generative AI
 google-generativeai==0.5.4
-openai==1.30.1
-cohere==5.5.3
-colorama==0.4.6
+
+# Allow some flexibility with cohere to resolve conflict with tokenizers
+cohere>=5.5.3,<6.0.0
+
 gpt-cli==0.0.15
