--- a/folders/gpt-cli/requirements.txt
+++ b/folders/gpt-cli/requirements.txt
@@ -1,6 +1,8 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
 
+pydantic==1.10.9
+
 # Allow flexibility for anthropic to avoid conflicts
 anthropic>=0.25.9,<0.26.0
 
