--- a/folders/gpt-cli/requirements.txt
+++ b/folders/gpt-cli/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.9.3
 aiosignal==1.3.1
 
 pydantic==1.10.9
+distro==1.8.0
 
 # Allow flexibility for anthropic to avoid conflicts
 anthropic>=0.25.9,<0.26.0
