--- a/folders/gpt-cli/requirements.txt
+++ b/folders/gpt-cli/requirements.txt
@@ -1,15 +1,47 @@
+# Merged requirements from original requirements.txt and secondary_requirements.txt
+
+# Secondary requirements (overrides or new additions)
+annotated-types==0.7.0
+anthropic==0.25.9
+boto3==1.28.0
+cohere==5.9.1
+distro==1.8.0
+fastavro==1.9.4
+google-ai-generativelanguage==0.6.4
+google-api-core==2.15.0
+google-api-python-client==2.134.0
+google-auth==2.26.2
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.4
+grpcio==1.60.0
+httpcore==0.17.0
+httpx==0.24.0
+httpx-sse==0.4.0
+idna==3.4
+jiter==0.5.0
+parameterized==0.9.0
+pydantic==2.0.3
+pydantic_core==2.3.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+rsa==4.9
+sniffio==1.3.0
+tqdm==4.66.2
+types-requests==2.31.0.6
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.2
+attrs==23.2.0
+botocore==1.34.133
+jmespath==1.0.1
+python-dateutil==2.8.2
+six==1.16.0
+
+# Original requirements.txt (merged with secondary)
 aiohttp==3.9.3
 aiosignal==1.3.1
-
-pydantic==1.10.9
-distro==1.8.0
-
-# Allow flexibility for anthropic to avoid conflicts
-anthropic>=0.25.9,<0.26.0
-
 anyio==3.6.2
 async-timeout==4.0.2
-attrs==23.2.0
 black==24.4.2
 blessings==1.7
 certifi==2022.12.7
@@ -18,9 +50,6 @@ click==8.1.7
 colorama==0.4.6
 frozenlist==1.3.3
 h11==0.14.0
-httpcore==0.17.0
-httpx==0.24.0
-idna==3.4
 markdown-it-py==2.2.0
 mdurl==0.1.2
 multidict==6.0.4
@@ -38,25 +67,19 @@ PyYAML==6.0.1
 regex==2023.3.23
 requests==2.32.3
 rich==13.7.1
-six==1.16.0
-sniffio==1.3.0
 tiktoken==0.3.3
 
 # Allow tokenizers version that satisfies both anthropic and cohere
 tokenizers>=0.15,<0.20
 
 tomli==2.0.1
-tqdm==4.66.2
-typing_extensions==4.11.0
-urllib3==2.2.2
 wcwidth==0.2.6
 yarl==1.8.2
 
 # Keep Google Generative AI
 google-generativeai==0.5.4
 
-# Allow some flexibility with cohere to resolve conflict with tokenizers
+# Allow flexibility with cohere to resolve conflict with tokenizers
 cohere>=5.5.3,<6.0.0
 
-# gpt-cli requires attrs==23.2.0 and needs to match with tokenizers
 gpt-cli==0.0.15
